[project]
name = "clari-copilot-mcp"
version = "0.1.0"
description = "MCP server for querying Clari Copilot call transcripts and summaries"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
slack = ["slack-sdk>=3.27.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "respx>=0.21.0"]

[project.scripts]
clari-copilot-mcp = "clari_copilot_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
